# coinlib

./: .gitignore  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: dart-test-analyze.yml  test-windows-cmake.yml
coinlib/: .gitignore  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
coinlib/example/: coinlib_example.dart
coinlib/include/: secp256k1_musig.h
coinlib/lib/: coinlib.dart
coinlib/lib/src/: address.dart  coin_unit.dart  coinlib_base.dart  musig.dart  network.dart  network_params.dart  taproot.dart
coinlib/test/: address_test.dart  coin_unit_test.dart  musig_test.dart  taproot_test.dart
coinlib/test/common/: bytes_test.dart  serial_test.dart
coinlib/test/crypto/: ec_compressed_public_key_test.dart  ec_private_key_test.dart  ec_public_key_test.dart  ecdsa_recoverable_signature_test.dart  ecdsa_signature_test.dart  hash_test.dart  hd_key_test.dart  message_signature_test.dart  nums_public_key_test.dart  schnorr_adaptor_signature_test.dart  schnorr_signature_test.dart  wif_test.dart
coinlib/test/dlc/: builder_test.dart  create_apo_transaction_test.dart  helpers.dart  outcome.dart  outcome_test.dart  ready_test.dart  terms.dart  terms_test.dart
coinlib/test/encode/: base58.dart  base58_test.dart  bech32_test.dart  wif_test.dart
coinlib/test/musig/: keys_test.dart  signing_test.dart
coinlib/test/scripts/: common.dart  operations_test.dart  program_test.dart  script_test.dart
coinlib/test/taproot/: leaves_test.dart  taproot_test.dart
coinlib/test/tx/: coin_selection_test.dart  input_signature_test.dart  legacy_transaction_test.dart  locktime.dart  outpoint_test.dart  output_test.dart  p2pkh_input_test.dart  p2sh_multisig_input_test.dart  p2wpkh_input_test.dart  raw_input_test.dart  sighash_type_test.dart  transaction_test.dart  witness_input_test.dart
coinlib/test/vectors/: base58.dart  bech32.dart  hd_keys.dart  inputs.dart  keys.dart  signatures.dart  taproot.dart  tx.dart
coinlib_flutter/: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
coinlib_flutter/android/: .gitignore  build.gradle  settings.gradle
coinlib_flutter/darwin/: coinlib_flutter.podspec
coinlib_flutter/darwin/Classes/: coinlib_flutter.c
coinlib_flutter/example/: README.md  pubspec.yaml
coinlib_flutter/example/android/: settings.gradle
coinlib_flutter/example/lib/: main.dart
coinlib_flutter/example/linux/: .gitignore  CMakeLists.txt  my_application.cc
coinlib_flutter/example/web/: index.html  manifest.json
coinlib_flutter/ios/: coinlib_flutter.podspec
coinlib_flutter/lib/: coinlib_flutter.dart  coinlib_flutter_bindings_generated.dart
coinlib_flutter/linux/: CMakeLists.txt
coinlib_flutter/macos/: coinlib_flutter.podspec
coinlib_flutter/src/: CMakeLists.txt  coinlib_flutter.c
coinlib_flutter/windows/: CMakeLists.txt
lib/: coinlib.dart
lib/src/: coinlib_base.dart
test/crypto/: ec_private_key_test.dart
(+152 files in other folders)
